整理成原本的版本

--- a/TEST.html
+++ b/TEST.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <script type="text/javascript" src="{!URLFOR($Resource.test, 'bootstrap-3.3.2.min.js')}"></script>
-        <script type="text/javascript" src="{!URLFOR($Resource.test, 'jquery-2.1.3.min.js')}"></script>
-        <link rel="stylesheet" href="{!URLFOR($Resource.test, 'bootstrap-3.3.2.min.css')}"></link>
-        <script type="text/javascript" src="{!URLFOR($Resource.test, 'bootstrap-multiselect.js')}"></script>
-        <link rel="stylesheet" href="{!URLFOR($Resource.test, 'bootstrap-multiselect.css')}"></link>
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="css/bootstrap-multiselect/bootstrap-multiselect.css" type="text/css">
+        <script type="text/javascript" src="js/bootstrap-multiselect/bootstrap-multiselect.js"></script>
 
 
 </head>
